objects/QuickInfoObj__c.object
<CustomObject>
    <fields>
        <fullName>QuickInfoObjDescription__c</fullName>
        <label>QuickInfoObjDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuickInfoOnlineAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickInfoOnlineAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuickInfoPhone__c</fullName>
        <label>QuickInfoPhone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Specialquot_info__c</fullName>
        <label>Special* &quot; info</label>
        <type>TextArea</type>
    </fields>
</CustomObject>